force-app/main/default/objects/Contact/fields/Emergency_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Address__c</fullName>
    <description>Emergency Contact Address</description>
    <label>Emergency Contact Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>