force-app/main/default/objects/Contact/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <description>Employee Id</description>
    <inlineHelpText>Employee Id</inlineHelpText>
    <label>Employee Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>