force-app/main/default/objects/Contact/fields/Original_Date_of_Hire__c.field-meta.xml
<CustomField>
    <fullName>Original_Date_of_Hire__c</fullName>
    <description>Original Date of Hire</description>
    <label>Original Date of Hire</label>
    <type>Date</type>
</CustomField>