force-app/main/default/objects/Contact/recordTypes/Emrgency_Contacts.recordType-meta.xml
<RecordType>
    <fullName>Emrgency_Contacts</fullName>
    <active>true</active>
    <description>Emergency Contact Information</description>
    <label>Emrgency Contacts</label>
</RecordType>